--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yaflog",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "YAML File Logger",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/jpdiv-code/yaflog#readme",
   "dependencies": {
+    "jhelp": "^1.3.0",
     "yaml": "^1.6.0"
   },
   "devDependencies": {
